tests/baselines/reference/undefinedTypeAssignment3.errors.txt
undefinedTypeAssignment3.ts(1,5): error TS2300: Duplicate identifier 'undefined'.


==== undefinedTypeAssignment3.ts (1 errors) ====
    var undefined = null;
        ~~~~~~~~~
!!! error TS2300: Duplicate identifier 'undefined'.
    